# petpet-api

./: Cargo.toml  README.md  build.rs  compile.linux  fleet.toml  rustfmt.toml
src/: main.rs  root.rs
utils/: compile_it.linux
