[package]
name = "petpet_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
image = "0.24"
petpet = "2.4.3"
base64 = "0.21"
serde_json = "1.0"
log = "0.4"
dotenv = "0.15"
env_logger = "0.11"
colored = "2.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[profile.release]
opt-level = 3
overflow-checks = false
debug = false
panic = "abort"
lto = "fat"
debug-assertions = false
incremental = false
